--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2022.5.18.1
 charset-normalizer==2.0.12
 idna==3.3
 oauthlib==3.2.0
+pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 tweepy==4.10.0
